@@ -457,6 +457,8 @@ repl call, 0x42EAD2,	0x4305AE,	0x42EB52,	"Leader_get_city_count_for_worker_prod_
 inlead,	   0x55D310,	0x5693A0,	0x55D2C0,	"Leader_sum_unit_maintenance",			"int (__fastcall *) (Leader * this, int edx, int government_id)"
 define,	   0xA52684,	0xA74E7C,	0xA52644,	"p_game_difficulty",				"int *"
 define,	   0x5CD960,	0x5DC940,	0x5CD880,	"Unit_can_enter_terrain",			"bool (__fastcall *) (Unit * this, int edx, int terrain_type_index)"
+define,	   0x41CD22,	0x41E04C,	0x41CDA2,	"ADDR_LUXURY_BOX_ROW_HEIGHT",			"byte *"
+define,	   0x30,	0x38,		0x30,		"LUXURY_BOX_ROW_HEIGHT_STACK_OFFSET",		"int"
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
