@@ -67,6 +67,10 @@ disallow_useless_bombard_vs_airfields = true
 ;   always: This change will always be applied, even on an actual Windows system
 draw_lines_using_gdi_plus = wine
 
+; This option reduces the vertical distance between rows in the list of luxuries on the city screen. This allows up to 11 luxuries to be displayed
+; neatly inside the box.
+compact_luxury_display_on_city_screen = false
+
 [====================]
 [=== OPTIMIZATION ===]
 [====================]
